--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'de.johnki.apod.shared'
-version = '1.0-SNAPSHOT'
+version = '1.0'
 
 repositories {
     google()
@@ -16,7 +16,7 @@ repositories {
 
 kotlin {
     android {
-        publishLibraryVariants("release")
+        publishLibraryVariants("debug", "release")
     }
     iosX64('ios') {
         binaries {
