--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -26,8 +26,9 @@ jobs:
           path: ~/.gradle/wrapper
           key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
       - name: Set version
-        run:
-          echo '::set-output name=VERSION::$(./gradlew properties  | grep version: | sed "s/version: //g")'
+        run: |
+          chmod u+x ./.github/showVersion.sh
+          echo '::set-output name=VERSION::$(./github/showVerison.sh)'
         id: random-color-generator
       - name: Get Version
         run: echo "The selected color is ${{ steps.random-color-generator.outputs.VERSION }}"
