--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -29,6 +29,7 @@ jobs:
         uses: smartsquaregmbh/delete-old-packages@v0.3.1
         with:
           user: mjohnki
+          keep: 0
           names: |
             de.johnki.apod.apod-lib-android-debug
             de.johnki.apod.apod-lib
