--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'org.jetbrains.kotlin.multiplatform' version '1.5.21'
+    id("com.chromaticnoise.multiplatform-swiftpackage") version "2.0.3"
     id 'com.android.library'
     id 'maven-publish'
 }
@@ -23,6 +24,16 @@ kotlin {
             }
         }
     }
+
+    multiplatformSwiftPackage {
+        packageName("apodlib")
+        swiftToolsVersion("5.3")
+        targetPlatforms {
+            iOS { v("11") }
+        }
+        outputDirectory(File(rootDir, "/"))
+    }
+
     sourceSets {
         commonMain {
 
